--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,27 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<plugins>
-			<plugin>
-				<!-- Build an executable JAR -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>org.apodhrad.p2diff.Test</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
+		    <plugin>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <configuration>
+		            <source>1.8</source>
+		            <target>1.8</target>
+		        </configuration>
+		    </plugin>
 		</plugins>
 	</build>
+	  <repositories>
+    <repository>
+      <id>bintray-apodhrad</id>
+      <url>https://dl.bintray.com/apodhrad/maven/</url>
+      <snapshots>
+	<enabled>true</enabled>
+      </snapshots>
+      <releases>
+	<enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
 	<dependencies>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -43,5 +47,25 @@
 	    	<artifactId>junit</artifactId>
 	    	<version>4.11</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>net.lingala.zip4j</groupId>
+		    <artifactId>zip4j</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+	    <dependency>
+	    	<groupId>org.apodhrad.jdownload</groupId>
+	    	<artifactId>jdownload-manager</artifactId>
+	    	<version>1.0.1</version>
+	    </dependency>
+	       <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <version>1.7.5</version>
+   </dependency>
+   <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-simple</artifactId>
+       <version>1.6.4</version>
+   </dependency>
 	</dependencies>
 </project>
