--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.apodhrad.p2diff</groupId>
-	<artifactId>p2diff</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<build>
-		<plugins>
-		    <plugin>
-		        <artifactId>maven-compiler-plugin</artifactId>
-		        <configuration>
-		            <source>1.8</source>
-		            <target>1.8</target>
-		        </configuration>
-		    </plugin>
-		</plugins>
-	</build>
-	  <repositories>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.apodhrad.p2diff</groupId>
+  <artifactId>p2diff</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+
+  <repositories>
     <repository>
       <id>bintray-apodhrad</id>
       <url>https://dl.bintray.com/apodhrad/maven/</url>
@@ -26,51 +16,85 @@
       </releases>
     </repository>
   </repositories>
-	<dependencies>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
-		</dependency>
-		<dependency>
-		    <groupId>com.googlecode.java-diff-utils</groupId>
-		    <artifactId>diffutils</artifactId>
-		    <version>1.2</version>
-		</dependency>
-		<dependency>
-	    	<groupId>org.freemarker</groupId>
-	    	<artifactId>freemarker</artifactId>
-	    	<version>2.3.22</version>
-	    </dependency>
-	    <dependency>
-	    	<groupId>junit</groupId>
-	    	<artifactId>junit</artifactId>
-	    	<version>4.11</version>
-	    </dependency>
-	    <dependency>
-		    <groupId>net.lingala.zip4j</groupId>
-		    <artifactId>zip4j</artifactId>
-		    <version>1.3.2</version>
-		</dependency>
-	    <dependency>
-	    	<groupId>org.apodhrad.jdownload</groupId>
-	    	<artifactId>jdownload-manager</artifactId>
-	    	<version>1.0.1</version>
-	    </dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-		    <artifactId>slf4j-api</artifactId>
-		    <version>1.7.5</version>
-		</dependency>
-		<dependency>
-	       <groupId>org.slf4j</groupId>
-	       <artifactId>slf4j-simple</artifactId>
-	       <version>1.6.4</version>
-	   </dependency>
-	   <dependency>
-		  <groupId>com.google.guava</groupId>
-		  <artifactId>guava</artifactId>
-		  <version>19.0</version>
-		</dependency>
-	</dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+	<artifactId>maven-compiler-plugin</artifactId>
+	<configuration>
+	  <source>1.8</source>
+	  <target>1.8</target>
+	</configuration>
+      </plugin>
+      <plugin>
+	<groupId>org.jacoco</groupId>
+	<artifactId>jacoco-maven-plugin</artifactId>
+	<version>0.7.5.201505241946</version>
+	<executions>
+	  <execution>
+	    <id>jacoco-initialize</id>
+	    <goals>
+	      <goal>prepare-agent</goal>
+	    </goals>
+	  </execution>
+	  <execution>
+	    <id>jacoco-site</id>
+	    <phase>test</phase>
+	    <goals>
+	      <goal>report</goal>
+	    </goals>
+	  </execution>
+	</executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.java-diff-utils</groupId>
+      <artifactId>diffutils</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.22</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+    </dependency>
+    <dependency>
+      <groupId>net.lingala.zip4j</groupId>
+      <artifactId>zip4j</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apodhrad.jdownload</groupId>
+      <artifactId>jdownload-manager</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.6.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
+  </dependencies>
+
 </project>
